chore: remove theme mode as it doesn't work well with storybook preview

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -5,6 +5,6 @@
 
 html, body, #root {
   font-family: var(--mwds-font-family);
-  background-color: var(--mwds-bg);
+  background-color: var(--mwds-background);
   color: var(--mwds-text);
 }
