--- a/src/Button/button.css
+++ b/src/Button/button.css
@@ -5,16 +5,15 @@
   border-radius: 3em;
   font-weight: 700;
   line-height: 1;
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .storybook-button--primary {
-  background-color: #555ab9;
-  color: white;
+  background-color: var(--mwds-primary);
+  color: var(--mwds-background);
 }
 .storybook-button--secondary {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
-  background-color: transparent;
-  color: #333;
+  background-color: var(--mwds-secondary);
+  color: var(--mwds-background);
 }
 .storybook-button--small {
   padding: 10px 16px;
